# ronald

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  keyconfig.yml.example  notes.txt
.github/workflows/: ci.yml
cli/: Cargo.toml
core/src/: debugger.rs  gui.rs  keyboard.rs  ppi.rs  psg.rs  system.rs
rom/: ROM_LICENSES
ronald-cli/: Cargo.toml
ronald-cli/src/: gui.rs  keybindings.rs  keyboard_configurator.rs  main.rs
ronald-cli/src/gui/: audio.rs  video.rs
ronald-core/: Cargo.toml
ronald-core/benches/: debug_event_throughput.rs
ronald-core/rom/: amsdos.asm  amsdos_0.5_reference.asm  basic_1.0_mine.asm  basic_1.0_reference.asm  os_464_reference.asm
ronald-core/src/: constants.rs  debug.rs  debugger.rs  lib.rs  system.rs
ronald-core/src/debug/: breakpoint.rs  event.rs  view.rs
ronald-core/src/system/: bus.rs  clock.rs  cpu.rs  instruction.rs  memory.rs
ronald-core/src/system/bus/: crtc.rs  fdc.rs  gate_array.rs  keyboard.rs  ppi.rs  psg.rs  screen.rs  tape.rs
ronald-core/src/system/bus/fdc/: dsk_file.rs
ronald-desktop/: Cargo.toml
ronald-desktop/src/: key_map_store.rs  key_mapper.rs  main.rs
ronald-egui/: Cargo.toml  Trunk.toml  index.html  keymap.default.json
ronald-egui/assets/: manifest.json  sw.js
ronald-egui/scripts/: generate-key-labels.py
ronald-egui/scripts/key-labels/: main.py  pyproject.toml
ronald-egui/src/: app.rs  colors.rs  debug.rs  frontend.rs  key_map_editor.rs  key_map_store.rs  key_mapper.rs  keyboard.rs  lib.rs  main.rs  system_config.rs  utils.rs
ronald-egui/src/debug/: cpu.rs  crtc.rs  gate_array.rs  memory.rs
ronald-egui/src/frontend/: audio.rs  video.rs
ronald-egui/src/key_map_editor/: layout.rs
ronald-egui/src/utils/: sync.rs  vectorize.rs
ronald-legacy-pixels/: Cargo.toml
ronald-legacy-pixels/src/: gui.rs  keybindings.rs  keyboard_configurator.rs  main.rs
ronald-legacy-web/: index.html  tsconfig.json
ronald-legacy-web/ronald-wasm/: Cargo.toml
ronald-legacy-web/ronald-wasm/src/: io.rs  lib.rs
ronald-legacy-web/src/: Utils.ts
ronald-legacy-web/src/assets/: default-keymap.json
ronald-legacy-web/src/components/devtools/: CrtcStateView.tsx  FdcStateView.tsx  GateArrayStateView.tsx  index.tsx
ronald-web/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
ronald-web/.rsw/: rsw.crates
ronald-web/ronald-wasm/: Cargo.toml
ronald-web/ronald-wasm/src/: io.rs  lib.rs
ronald-web/src/: App.tsx  Harness.ts  index.css
ronald-web/src/components/: ControlButton.tsx  CpuStateView.tsx
ronald-web/src/components/devtools/: CpuStateView.tsx  DisassemblyView.tsx  FdcStateView.tsx  ScreenStateView.tsx  index.tsx
src/: bus.rs  cpu.rs  crtc.rs  debugger.rs  dsk_file.rs  fdc.rs  gate_array.rs  gui.rs  instruction.rs  keyboard.rs  keyboard_configurator.rs  main.rs  memory.rs  pio.rs  ppi.rs  psg.rs  screen.rs  system.rs  tape.rs
web/wasm/: Cargo.toml
