[package]
name = "ronald"
version = "0.1.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.4"
log = "0.4.14"
minifb = "0.19.2"
native-dialog = "0.5.5"
nom = "6.2.1"