[package]
name = "ronald"
version = "0.1.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.5"
cpal = "0.13.5"
env_logger = "0.9.0"
log = "0.4.17"
minifb = "0.23.0"
native-dialog = "0.6.3"
nom = "7.1.1"
