[package]
name = "ronald-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.5"
cpal = "0.14.0"
env_logger = "0.9.0"
log = "0.4.17"
native-dialog = "0.6.3"
pixels = "0.9.0"
ronald-core = { path = "../ronald-core" }
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.9.10"
winit = "0.26.1"
