[package]
name = "ronald-cli"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.40"
cpal = "0.16.0"
env_logger = "0.11.8"
log = "0.4.27"
native-dialog = "0.9.0"
pixels = "0.15.0"
ronald-core = { path = "../ronald-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
winit = "0.30.11"
