[package]
name = "ronald-core"
version = "0.2.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
log = "0.4.17"
nom = "7.1.1"
psg = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
