[package]
name = "ronald-core"
version = "0.2.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
num_enum = { version = "0.7.5", features = ["complex-expressions"] }
psg = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "debug_event_throughput"
harness = false
