[package]
name = "ronald-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
ronald-egui = { path = "../ronald-egui" }
eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "x11",
] }
env_logger = "0.11.8"
egui = { git = "https://github.com/mdm/egui.git", branch = "latest-patched" }
log = "0.4.27"
anyhow = "1.0.98"
serde_json = "1.0.140"
serde = "1.0.219"
