[package]
name = "ronald-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
ronald-core = { path = "../ronald-core" }
eframe = { version = "0.31.1", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "x11",
] }
egui_extras = { version = "0.31.1", features = ["svg"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
cpal = "0.16.0"
log = "0.4.27"
rfd = "0.15.4"
pollster = "0.4.0"
