[package]
name = "ronald-wasm"
version = "0.1.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
cpal = { version = "0.15", features = ["wasm-bindgen"] }
js-sys = "0.3"
log = "0.4"
ronald-core = { path = "../../ronald-core" }
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
] }
